// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCommitsTypes should return \`breaking\` for breaking changes 1`] = `
Array [
  "feat",
  "fix",
  "chore",
  "breaking",
]
`;

exports[`getCommitsTypes should return commits types 1`] = `
Array [
  "feat",
  "fix",
  "chore",
]
`;

exports[`getCommitsTypes should return unique types 1`] = `
Array [
  "feat",
  "fix",
  "chore",
]
`;
